kubernetes/pods/istio/multiple-websockets-same-namespace/websockets-1/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tornado-1
spec:
  hosts:
  - "tornado-0.8.0-1.demo.istio-1.prod-1.k8s.devops.bot"
  gateways:
  - gateway-1
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tornado-1
      weight: 100
    websocketUpgrade: true
